sumando vista de citas medicas usario logeado

--- a/Cliente/estilos/consultaCita.css
+++ b/Cliente/estilos/consultaCita.css
@@ -240,3 +240,12 @@ footer {
     border-radius: 5px;
 }
 
+.scrollspy-example {
+    position: relative;
+    /* height: 400px; */
+    height: 600px;
+    overflow-y: scroll;
+    padding: 20px;
+    border: 1px solid #ddd;
+    background-color: #f9f9f9;
+}
