--- a/Cliente/estilos/inicio.css
+++ b/Cliente/estilos/inicio.css
@@ -231,3 +231,8 @@ footer {
 main p{
   text-align: justify;
 }
+footer .company a {
+    color: inherit;        /* Usa el color del texto del contenedor padre */
+    text-decoration: none; /* Elimina el subrayado */
+    cursor: default;       /* Cambia el cursor al de texto normal */
+}
