--- a/Cliente/estilos/catalogoAnalisis.css
+++ b/Cliente/estilos/catalogoAnalisis.css
@@ -1,40 +1,50 @@
 /* Estilos generales */
 body {
-    font-family: Arial, sans-serif;
-    background-color: #e8f5e9; /* Verde claro para el fondo general */
-    color: #2e7d32; /* Verde oscuro para el texto */
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh; /* Asegura que el cuerpo llene toda la altura de la ventana */
+  font-family: Arial, sans-serif;
+  background-color: #e8f5e9; /* Verde claro para el fondo general */
+  color: #2e7d32; /* Verde oscuro para el texto */
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Asegura que el cuerpo llene toda la altura de la ventana */
 }
 /* Estilos de catalogo */
-        .service-section {
-            margin: 20px 0;
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            background-color: #f9f9f9;
-        }
+.service-section {
+  margin: 20px 0;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+}
 
-        .service-title {
-            font-size: 1.5rem;
-            font-weight: bold;
-        }
+.service-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
 
-        .service-image {
-            max-width: 100%;
-            height: auto;
-            border-radius: 10px;
-        }
+.service-image {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
 
-        .service-price {
-            font-size: 1.2rem;
-            font-weight: bold;
-            color: #28a745;
-        }
+.service-price {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #28a745;
+}
 
-        .service-buttons {
-            margin-top: 10px;
-        }
+.service-buttons {
+  margin-top: 10px;
+}
+.description-title {
+  font-size: 1rem;
+  /* font-weight: bolder; */
+}
+.container-section {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
