incorporando modal de boostrap para modificar cita

--- a/Cliente/estilos/contactanos.css
+++ b/Cliente/estilos/contactanos.css
@@ -202,7 +202,10 @@ footer {
 .icons a:hover {
   color: #a5d6a7; /* Light green */
 }
-
+.footer-container {
+  flex-direction: column;
+  text-align: center;
+}
 /* Responsive Design */
 @media (max-width: 768px) {
   .header-container {
