Actualización de json
Actualice los json de:
Doctores -> tienen especialidad
Especialidades -> las actualice conforme a las de Javier y añadí otras que considero importante.
user-> puse nombre, es decir nombre completo "name" y "username" para id o nombre de pila.
Modifique server para hacer un join entre especialidades y doctores, es importante para contáctanos ya que nos dará el join entre los 2 archivos y nos lo regresará.
Modifique los css para la parte de footer y una mejor visualización de doctores.
Modifique el html de "login" para poner el nombre completo de un nuevo usuario.

--- a/Cliente/estilos/contactanos.css
+++ b/Cliente/estilos/contactanos.css
@@ -174,6 +174,14 @@ footer {
   padding: 20px 0;
 }
 
+/* Footer Styles */
+footer {
+  background-color: #004d40; /* Dark green */
+  color: white;
+  padding: 20px 0;
+  text-align: center;
+}
+
 .footer-container {
   width: 90%;
   margin: 0 auto;
@@ -201,10 +209,6 @@ footer {
 
 .icons a:hover {
   color: #a5d6a7; /* Light green */
-}
-.footer-container {
-  flex-direction: column;
-  text-align: center;
 }
 /* Responsive Design */
 @media (max-width: 768px) {
