SOAP Historial Medico
Se agregó la pagina Historial Médico, el cual adquiere la información por medio de una solicitud SOAP

--- a/Cliente/estilos/consultaHistorialMedico.css
+++ b/Cliente/estilos/consultaHistorialMedico.css
@@ -62,7 +62,7 @@ nav ul {
   gap: 10px;
 }
 
-#logoutButton {
+#logoutButton, #redireccionSesion {
   background-color: #00796b; /* Teal green */
   color: white;
   border: none;
@@ -71,7 +71,7 @@ nav ul {
   cursor: pointer;
 }
 
-#logoutButton:hover {
+#logoutButton:hover, #redireccionSesion:hover {
   background-color: #004d40; /* Darker green */
 }
 
@@ -89,45 +89,12 @@ nav ul {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+.about-us,
 .additional-info {
   background-color: #e8f5e9; /* Soft green section background */
   margin: 20px 0;
   padding: 20px;
   border-radius: 10px;
-  /* Evita que cualquier contenido se salga */
-  overflow: hidden; 
-}
-
-.why-us-title {
-  text-align: end; /* Centrar el título */
-  margin-bottom: 20px; /* Separación del contenido principal */
-  font-size: 1.8em; /* Tamaño del título */
-  color: #333;
-}
-
-.content {
-  display: flex; /* Mantener el diseño en línea */
-  justify-content: space-between;
-  gap: 20px; /* Espaciado entre video y descripción */
-}
-
-.video {
-  flex: 0 0 40%; /* No crece, no se reduce, ocupa el 40% */
-  object-fit: cover; /* Ajusta la imagen si es necesario */
-  max-width: 100%; /* Evita que exceda el contenedor */
-  height: auto; /* Mantiene la proporción de la imagen */
-}
-
-.description-why-us {
-  flex: 0 0 60%; /* No crece, no se reduce, ocupa el 60% */
-  max-width: 100%; /* Asegura que los párrafos no excedan el tamaño del contenedor */
-}
-.about-us {
-  background-color: #e8f5e9; /* Soft green section background */
-  margin: 20px 0;
-  padding: 20px;
-  border-radius: 10px;
-
 }
 
 .about-us h2,
@@ -139,27 +106,7 @@ nav ul {
 .why-us p {
   line-height: 1.6;
 }
-.about-us-container{
-    display: flex;
-    justify-content: space-between;
-    /* flex-wrap: wrap; */
-    gap: 0; /* Sin espacio entre los elementos */
-    padding: 0; /* Sin relleno dentro del contenedor */
-    margin-right: 0; /* Sin márgenes en el contenedor */
-}
-.about-us-container section {
-    flex: 0 0 50%; /* No crece, no se reduce, ocupa el 60% */
-    margin: 1% ;
-}
 
-.about-us-container img {
-    flex: 0 0 40%; /* No crece, no se reduce, ocupa el 40% */
-    object-fit: cover; /* Ajusta la imagen si es necesario */
-    max-width: 100%; 
-    height: auto; /*  proporción de la imagen */
-    margin: 0; /* Sin márgenes */
-    padding: 0; /* Sin relleno */
-}
 /* Footer Styles */
 footer {
   background-color: #004d40; /* Dark green */
@@ -217,22 +164,79 @@ footer {
     text-align: center;
   }
 }
-/* Estilos específicos para el carrusel */
-#carouselExampleDark {
-  max-height: 50vh; /* Limita la altura máxima al 60% de la altura de la ventana */
-  overflow: hidden; /* Evita que el contenido se desborde */
+
+#div_default {
+  display: flex;
+  justify-content: center;
 }
 
-#carouselExampleDark .carousel-inner img {
-  object-fit: cover; /* Ajusta las imágenes dentro de su contenedor */
-  height: 50vh; /* Asegura que las imágenes no excedan la altura del carrusel */
+.card_default {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #e8f5e9;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, .125);
+  border-radius: .25rem;
 }
-/* Se justifica el contendio de texto de todos los parrafos de la paginita */
-main p{
-  text-align: justify;
+
+#img_logo {
+  width: 100%; /* Ancho máximo igual al ancho del contenedor */
+  height: auto; 
+  object-fit: contain; /* Se asegura de que la imagen se vea completamente dentro del contenedor */
+
+  padding: 40px;
 }
-footer .company a {
-    color: inherit;        /* Usa el color del texto del contenedor padre */
-    text-decoration: none; /* Elimina el subrayado */
-    cursor: default;       /* Cambia el cursor al de texto normal */
+
+.card-logo{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#title_img{
+  text-align: center;
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+.container-xxl.card{
+  padding: 0px 0px;
+}
+
+.card-header{
+  background: #00796b !important;
+  color: white !important;
+  text-align: center;
+}
+
+.form-datosPersonales{
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
+  grid-gap: 35px 20px;
+}
+
+.form-estudios{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 20px 20px;
+}
+
+.form-nacimiento{
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr 2fr;
+  grid-gap: 20px 20px;
+}
+
+.form-responsable{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px 20px;
 }
