--- a/Cliente/estilos/consultaHistorialMedico.css
+++ b/Cliente/estilos/consultaHistorialMedico.css
@@ -185,6 +185,7 @@ footer {
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, .125);
   border-radius: .25rem;
+  padding: 20px;
 }
 
 #img_logo {
