--- a/Cliente/estilos/inicio.css
+++ b/Cliente/estilos/inicio.css
@@ -4,77 +4,19 @@ body {
   margin: 0;
   padding: 0;
   color: #333;
-  background-color: #f5f9f6; /* Soft green background */
+  background-color: #f5f9f6;
+  /* Soft green background */
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* Asegura que el cuerpo ocupe toda la altura de la ventana */
+  min-height: 100vh;
+  /* Asegura que el cuerpo ocupe toda la altura de la ventana */
 }
 
 main {
-  flex: 1; /* Permite que este contenedor crezca y empuje el footer hacia abajo */
+  flex: 1;
+  /* Permite que este contenedor crezca y empuje el footer hacia abajo */
   padding: 40px 20px;
 }
-
-/* Header Styles */
-header {
-  background-color: #004d40; /* Dark green */
-  color: white;
-  padding: 20px 0;
-}
-
-.header-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 90%;
-  margin: 0 auto;
-}
-
-.logo img {
-  height: 70px;
-}
-
-nav ul {
-  list-style: none;
-  display: flex;
-  padding: 0;
-  margin: 0;
-}
-
-.nav-links li {
-  margin: 0 15px;
-}
-
-.nav-links a {
-  color: white;
-  text-decoration: none;
-  font-size: 16px;
-}
-
-.nav-links a:hover {
-  color: #a5d6a7; /* Light green */
-}
-
-/* User Greeting and Logout */
-.user-container {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-#logoutButton {
-  background-color: #00796b; /* Teal green */
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-#logoutButton:hover {
-  background-color: #004d40; /* Darker green */
-}
-
 /* Main Styles */
 .image-gallery {
   display: flex;
